[tool.poetry]
name = "hubert-ecg"
version = "1.0.0"
description = "A Self-Supervised Foundation Model for Broad and Scalable Cardiac Application"
authors = ["HuBERT-ECG Team"]
readme = "README.md"
license = "CC BY-NC 4.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
torchaudio = ">=2.0.0"
transformers = ">=4.30.0"
numpy = ">=1.20.0"
pandas = ">=1.3.0"
matplotlib = ">=3.5.0"
scikit-learn = ">=1.0.0"
scipy = ">=1.7.0"
tqdm = ">=4.60.0"
wandb = ">=0.13.0"
huggingface-hub = ">=0.10.0"
wfdb = ">=4.0.0"
biosppy = ">=1.0.0"
neurokit2 = ">=0.2.0"
librosa = ">=0.9.0"
plotly = ">=5.0.0"
openpyxl = ">=3.0.0"
iterative-stratification = ">=0.1.7"

[tool.poetry.group.dev.dependencies]
jupyter = "*"
ipykernel = "*"
ipywidgets = "*"
jupyterlab = "*"
pytest = ">=7.0.0"
black = ">=22.0.0"
isort = ">=5.0.0"
flake8 = ">=5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
